--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ http {
     # HTTP: перенаправление на HTTPS
     server {
         listen 80;
-        server_name myproject.duckdns.org api.myproject.duckdns.org;
+        server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
         return 301 https://$host$request_uri;
     }
 
@@ -13,8 +13,8 @@ http {
         listen 443 ssl;
         server_name myproject.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/myproject.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/myproject.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://frontend:80;
@@ -28,8 +28,8 @@ http {
         listen 443 ssl;
         server_name api.myproject.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/myproject.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/myproject.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://backend:8000;
