--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
     # HTTPS для фронтенда
     server {
         listen 443 ssl;
-        server_name myproject.duckdns.org;
+        server_name ab328c6h7.duckdns.org;
 
         ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
@@ -26,7 +26,7 @@ http {
     # HTTPS для бэкенда
     server {
         listen 443 ssl;
-        server_name api.myproject.duckdns.org;
+        server_name abchaaa.duckdns.org;
 
         ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
