--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,29 @@
 events {}
 
 http {
-    # HTTP: перенаправление на HTTPS
+    # HTTP: redirect all requests to HTTPS
     server {
-        listen 80;
+        listen 80 default_server;
         server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
+
         return 301 https://$host$request_uri;
     }
 
-    # HTTPS для фронтенда
+    # Block access by IP
+    server {
+        listen 80 default_server;
+        listen 443 ssl default_server;
+
+        server_name _; # Matches any request without a valid hostname
+
+        # Placeholder SSL certificates to avoid Nginx errors
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
+
+        return 444; # Close the connection without any response
+    }
+
+    # HTTPS for frontend
     server {
         listen 443 ssl;
         server_name ab328c6h7.duckdns.org;
@@ -23,13 +38,14 @@ http {
         }
     }
 
-    # HTTPS для бэкенда
+    # HTTPS for backend
     server {
         listen 443 ssl;
         server_name abchaaa.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
+        # Ensure the correct certificate is used for the backend domain
+        ssl_certificate /etc/letsencrypt/live/abchaaa.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/abchaaa.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://backend:8000;
