--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,29 @@
 events {}
 
 http {
-    # HTTP: redirect all requests to HTTPS
+    # HTTP: перенаправление на HTTPS
     server {
-        listen 80 default_server;
+        listen 80 default_server; # Только один блок может быть default_server
         server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
 
         return 301 https://$host$request_uri;
     }
 
-    # Block access by IP
+    # Блок для блокировки доступа по IP
     server {
-        listen 80 default_server;
+        listen 80; # Убираем default_server здесь
         listen 443 ssl default_server;
 
-        server_name _; # Matches any request without a valid hostname
+        server_name _;
 
-        # Placeholder SSL certificates to avoid Nginx errors
+        # Моковые сертификаты для предотвращения ошибок
         ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
-        return 444; # Close the connection without any response
+        return 444; # Закрываем соединение
     }
 
-    # HTTPS for frontend
+    # HTTPS для фронтенда
     server {
         listen 443 ssl;
         server_name ab328c6h7.duckdns.org;
@@ -38,12 +38,11 @@ http {
         }
     }
 
-    # HTTPS for backend
+    # HTTPS для бэкенда
     server {
         listen 443 ssl;
         server_name abchaaa.duckdns.org;
 
-        # Ensure the correct certificate is used for the backend domain
         ssl_certificate /etc/letsencrypt/live/abchaaa.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/abchaaa.duckdns.org/privkey.pem;
 
