--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
 events {}
 
 http {
-    # HTTP: перенаправление на HTTPS
+    # HTTP: перенаправление всех запросов на HTTPS
     server {
-        listen 80 default_server; # Только один блок может быть default_server
+        listen 80 default_server;
         server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
 
         return 301 https://$host$request_uri;
@@ -11,12 +11,11 @@ http {
 
     # Блок для блокировки доступа по IP
     server {
-        listen 80; # Убираем default_server здесь
+        listen 80;
         listen 443 ssl default_server;
 
-        server_name _;
+        server_name _; # Для запросов по IP или несуществующим хостам
 
-        # Моковые сертификаты для предотвращения ошибок
         ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
@@ -43,8 +42,8 @@ http {
         listen 443 ssl;
         server_name abchaaa.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/abchaaa.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/abchaaa.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://backend:8000;
