--- a/frontend/public/tonconnect-manifest.json
+++ b/frontend/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://589a-2a12-5940-76ab-00-2.ngrok-free.app",
+  "url": "https://ab328c6h7.duckdns.org",
   "name": "Donald-Bettings",
   "iconUrl": "logo.png"
 }
