--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "prettier": "3.4.2",
     "typescript": "^4.9.5"
   }
