--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -4,6 +4,7 @@ aiohttp-sse-client==0.2.1
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+APScheduler==3.11.0
 asyncpg==0.30.0
 attrs==24.2.0
 bitarray==3.0.0
@@ -28,5 +29,6 @@ SQLAlchemy==2.0.36
 starlette==0.41.3
 tonsdk==1.0.15
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==2.2.3
 yarl==1.18.0
