--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,34 +1,33 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.7
-aiohttp-sse-client==0.2.1
-aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.2.post1
+anyio==4.7.0
 APScheduler==3.11.0
 asyncpg==0.30.0
-attrs==24.2.0
 bitarray==3.0.0
-certifi==2024.8.30
+certifi==2024.12.14
 cffi==1.17.1
-charset-normalizer==3.4.0
-fastapi==0.115.5
-frozenlist==1.5.0
+charset-normalizer==3.4.1
+click==8.1.8
+fastapi==0.115.6
+greenlet==3.1.1
+h11==0.14.0
 idna==3.10
-multidict==6.1.0
-propcache==0.2.0
 pycparser==2.22
-pydantic==2.10.1
-pydantic-settings==2.6.1
-pydantic_core==2.27.1
+pycryptodomex==3.21.0
+pydantic==2.10.4
+pydantic-settings==2.7.0
+pydantic_core==2.27.2
+PyJWT==2.10.1
 PyNaCl==1.5.0
 python-dotenv==1.0.1
-pytonconnect==0.3.1
+pytoniq==0.1.40
+pytoniq-core==0.1.40
 requests==2.32.3
+setuptools==75.6.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
-tonsdk==1.0.15
 typing_extensions==4.12.2
 tzlocal==5.2
-urllib3==2.2.3
-yarl==1.18.0
+urllib3==2.3.0
+uvicorn==0.34.0
+x25519==0.0.2
