--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY temp/requirements.txt .
+COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./temp .
+COPY . .
