--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,7 +1,7 @@
 services:
   app:
     build:
-      context: ./
+      context: ./app
       dockerfile: Dockerfile
     container_name: donalds-back
     command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080" ]
