--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,15 @@
 events {}
 
 http {
-    # HTTP: перенаправление всех запросов на HTTPS
+    # Custom log format to include response headers
+    log_format response_headers_log '$remote_addr - $remote_user [$time_local] '
+                                    '"$request" $status $body_bytes_sent '
+                                    '"$http_referer" "$http_user_agent" '
+                                    'response_headers: "$sent_http_<header_name>"';
+
+    access_log /var/log/nginx/backend_response_headers.log response_headers_log;
+
+    # HTTP: redirect all requests to HTTPS
     server {
         listen 80 default_server;
         server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
@@ -9,20 +17,20 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # Блок для блокировки доступа по IP
+    # Block access by IP
     server {
         listen 80;
         listen 443 ssl default_server;
 
-        server_name _; # Для запросов по IP или несуществующим хостам
+        server_name _;
 
         ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
-        return 444; # Закрываем соединение
+        return 444;
     }
 
-    # HTTPS для фронтенда
+    # HTTPS for frontend
     server {
         listen 443 ssl;
         server_name ab328c6h7.duckdns.org;
@@ -37,7 +45,7 @@ http {
         }
     }
 
-    # HTTPS для бэкенда
+    # HTTPS for backend
     server {
         listen 443 ssl;
         server_name abchaaa.duckdns.org;
@@ -49,6 +57,9 @@ http {
             proxy_pass http://app:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+
+            # Log specific response headers
+            access_log /var/log/nginx/backend_response_headers.log response_headers_log;
         }
     }
 }
