--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
     log_format response_headers_log '$remote_addr - $remote_user [$time_local] '
                                     '"$request" $status $body_bytes_sent '
                                     '"$http_referer" "$http_user_agent" '
-                                    'response_headers: "$sent_http_<header_name>"';
+                                    'response_headers: "$sent_http_Access-Control-Allow-Origin"';
 
     access_log /var/log/nginx/backend_response_headers.log response_headers_log;
 
