--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
 APScheduler==3.11.0
@@ -10,7 +11,11 @@ click==8.1.8
 fastapi==0.115.6
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+Mako==1.3.8
+MarkupSafe==3.0.2
 pycparser==2.22
 pycryptodomex==3.21.0
 pydantic==2.10.4
