--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "prettier": "3.4.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.7.2"
   }
 }
