--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.14",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/telegram-web-app": "^7.10.1",
     "add": "^2.0.6",
     "yarn": "^1.22.22"
   }
