--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -7,6 +7,7 @@ services:
     command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080" ]
     restart: unless-stopped
     volumes:
+      - ./app/storage/:/app/storage/
       - ./app/settings.json:/app/settings.json
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
