--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "axios-auth-refresh": "^3.3.6",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
