--- a/backend/vault/vault-compose.yaml
+++ b/backend/vault/vault-compose.yaml
@@ -7,8 +7,8 @@ services:
       - "8200:8200"
     cap_add:
       - IPC_LOCK
-    environment:
-      VAULT_ADDR: "http://0.0.0.0:8200"
+#    environment:
+#      VAULT_ADDR: "http://0.0.0.0:8200"
     command: "server -config=/vault/config/vault.hcl"
     volumes:
       - ./vault_data:/vault/file
