--- a/frontend/public/tonconnect-manifest.json
+++ b/frontend/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://ab328c6h7.duckdns.org",
+  "url": "https://wp-dev-app.duckdns.org",
   "name": "Donald-Bettings",
-  "iconUrl": "https://raw.githubusercontent.com/porterest/wp-front/refs/heads/main/frontend/public/logo.png"
+  "iconUrl": "https://raw.githubusercontent.com/porterest/wp-front/refs/heads/dev/frontend/public/logo.png"
 }
