--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     # HTTP: redirect all requests to HTTPS
     server {
         listen 80 default_server;
-        server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
+        server_name wp-dev-app.duckdns.org wp-dev-api.duckdns.org;
 
         return 301 https://$host$request_uri;
     }
@@ -24,8 +24,8 @@ http {
 
         server_name _;
 
-        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/wp-dev-app.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/wp-dev-api.duckdns.org/privkey.pem;
 
         return 444;
     }
@@ -33,10 +33,10 @@ http {
     # HTTPS for frontend
     server {
         listen 443 ssl;
-        server_name ab328c6h7.duckdns.org;
+        server_name wp-dev-app.duckdns.org
 
-        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/wp-dev-app.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/wp-dev-app.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://frontend:80;
@@ -48,10 +48,10 @@ http {
     # HTTPS for backend
     server {
         listen 443 ssl;
-        server_name abchaaa.duckdns.org;
+        server_name wp-dev-api.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/wp-dev-api.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/wp-dev-api.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://app:8080;
