--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,31 @@ services:
       - app
       - frontend
 
+#  prometheus:
+#    image: prom/prometheus:latest
+#    container_name: prometheus
+#    volumes:
+#      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#    ports:
+#      - "9090:9090"
+#    restart: unless-stopped
+#
+#  grafana:
+#    image: grafana/grafana:latest
+#    container_name: grafana
+#    ports:
+#      - "3000:3000"
+#    restart: unless-stopped
+#    environment:
+#      - GF_SECURITY_ADMIN_PASSWORD=admin
+#    volumes:
+#      - grafana-storage:/var/lib/grafana
+#
+#volumes:
+#  grafana-storage:
+#
+
+
 
 include:
   - ./backend/compose.yaml
