--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -12,6 +12,8 @@ services:
       - ./app/.env:/app/.env
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
+    networks:
+      - wp_network
 #    depends_on:
 #      db:
 #        condition: service_healthy
