--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,8 @@ http {
         server_name wp-dev-app.duckdns.org wp-dev-api.duckdns.org;
 
         return 301 https://$host$request_uri;
+
+    server_names_hash_bucket_size 128;
     }
 
     # Block access by IP
