--- a/nginx.conf
+++ b/nginx.conf
@@ -56,6 +56,17 @@ http {
         ssl_certificate /etc/letsencrypt/live/wp-dev-api.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/wp-dev-api.duckdns.org/privkey.pem;
 
+        locaton /logs {
+            proxy_pass http://dozzle:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            auth_basic "Restricted Access";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+        }
+
         location / {
             proxy_pass http://app:8080;
             proxy_set_header Host $host;
