--- a/nginx.conf
+++ b/nginx.conf
@@ -56,7 +56,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/wp-dev-api.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/wp-dev-api.duckdns.org/privkey.pem;
 
-        locaton /logs {
+        location /logs {
             proxy_pass http://dozzle:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
