--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
     # HTTP: redirect all requests to HTTPS
     server {
         listen 80 default_server;
-        server_name wp-dev-app.duckdns.org wp-dev-api.duckdns.org;
+        server_name ab328c6h7.duckdns.org abchaaa.duckdns.org;
 
         return 301 https://$host$request_uri;
 
@@ -27,8 +27,8 @@ http {
 
         server_name _;
 
-        ssl_certificate /etc/letsencrypt/live/wp-dev-app.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/wp-dev-app.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         return 444;
     }
@@ -36,10 +36,10 @@ http {
     # HTTPS for frontend
     server {
         listen 443 ssl;
-        server_name wp-dev-app.duckdns.org
+        server_name ab328c6h7.duckdns.org
 
-        ssl_certificate /etc/letsencrypt/live/wp-dev-app.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/wp-dev-app.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://frontend:80;
@@ -51,10 +51,10 @@ http {
     # HTTPS for backend
     server {
         listen 443 ssl;
-        server_name wp-dev-api.duckdns.org;
+        server_name abchaaa.duckdns.org;
 
-        ssl_certificate /etc/letsencrypt/live/wp-dev-api.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/wp-dev-api.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/abchaaa.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/abchaaa.duckdns.org/privkey.pem;
 
         location /logs {
             proxy_pass http://dozzle:8080;
