--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
                                     'response_headers: "$sent_http_Access-Control-Allow-Origin"';
 
     access_log /var/log/nginx/backend_response_headers.log response_headers_log;
-    server_names_hash_bucket_size: 128;
+    server_names_hash_bucket_size 128;
 
     # HTTP: redirect all requests to HTTPS
     server {
