--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,8 @@ http {
         listen 443 ssl;
         server_name wp-dev-app.duckdns.org
 
-        ssl_certificate /etc/letsencrypt/live/wp-dev-app.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/wp-dev-app.duckdns.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
             proxy_pass http://frontend:80;
