--- a/nginx.conf
+++ b/nginx.conf
@@ -34,9 +34,9 @@ http {
     # HTTPS for frontend
     server {
         listen 443 ssl;
-        server_name wp-dev-app.duckdns.org
+        server_name ab328c6h7.duckdns.org
 
-        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org.duckdns.org/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/ab328c6h7.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ab328c6h7.duckdns.org/privkey.pem;
 
         location / {
